# karp-3dm-problem

./: README.md  cpp0  java0
instances/large/hard/: hard_n306_m31671_s0.3dm  hard_n306_m31671_s1.3dm  hard_n306_m31671_s2.3dm  hard_n306_m31671_s3.3dm  hard_n306_m31671_s4.3dm  hard_n384_m49728_s0.3dm  (+4 more)
presentation/: Makefile  notes.md  slides.tex  theme.tex
presentation/secciones/: 02_problema.tex  03_modelo.tex  04_complejidad.tex  05_implementacion.tex  06_resultados.tex  07_conclusiones.tex  99_backup.tex
report/: Makefile  informe.blg  informe.tex  preamble.tex  refs.bib
report/secciones/: 00_resumen.tex  01_problema.tex  02_modelo.tex  03_complejidad.tex  04_implementacion.tex  05_experimentos.tex  06_conclusiones.tex
report/tablas/: correctness.tex  summary_by_family.tex  summary_by_n.tex
results/: discussion.md  environment.md
results/raw/: run_20260429_024225.csv  run_20260429_024823.csv  run_20260429_024835.csv.partial  run_20260429_025211.csv  run_20260429_025305.csv.partial  run_missing_20260429_031020.csv
results/tables/: correctness.csv  summary_by_family.csv  summary_by_n.csv
src/cpp/: 3dm  Makefile  README.md
src/java/: README.md  build.sh
src/python/: README.md  pyproject.toml
src/python/tests/: test_brute.py  test_io.py  test_smart.py
src/python/tests/data/: mini1.3dm
src/python/threedm/: __init__.py  brute.py  cli.py  instance.py  matching.py  smart.py
tools/: README.md  analyze.py  csv_to_latex.py  generator.py  plot_results.py  plots_to_pdf.py  reproduce.sh  run_benchmarks.sh  run_missing.sh  validator.py
(+172 files in other folders)
